reducing schema to retain minimum necessary

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,22 +11,13 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    input                      = "./data_test/samplesheet.csv"
 
     // References
     genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
-
-    // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
 
     // Boilerplate options
-    outdir                       = null
+    outdir                       = "./results_test"
     publish_dir_mode             = 'copy'
     email                        = null
     email_on_fail                = null
@@ -226,11 +217,11 @@ dag {
 
 manifest {
     name            = 'nf-core/nfmitnanext'
-    author          = """juanjo55""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
+    author          = """juanjo255""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
         // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
-            name: 'juanjo55',
+            name: 'juanjo255',
             affiliation: '',
             email: '',
             github: '',
