minimap2 appers to almost working. I just need to download docker

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,13 +11,14 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = "./data_test/samplesheet.csv"
+    input                      = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/samplesheet.csv"
 
     // References
-    genome                     = null
+    //genome                     = null
+    reference_genome           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
 
     // Boilerplate options
-    outdir                       = "./results_test"
+    outdir                       = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/results_test"
     publish_dir_mode             = 'copy'
     email                        = null
     email_on_fail                = null
@@ -171,8 +172,6 @@ podman.registry       = 'quay.io'
 singularity.registry  = 'quay.io'
 charliecloud.registry = 'quay.io'
 
-// Load igenomes.config if required
-includeConfig !params.igenomes_ignore ? 'conf/igenomes.config' : 'conf/igenomes_ignored.config'
 
 // Export these variables to prevent local Python/R libraries from conflicting with those in the container
 // The JULIA depot path has been adjusted to a fixed path `/usr/local/share/julia` that needs to be used for packages in the container.
