fix pull request

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,11 +19,11 @@ params {
     igenomes_ignore            = false
 
     // MultiQC options
-    multiqc_config             = null
-    multiqc_title              = null
-    multiqc_logo               = null
-    max_multiqc_email_size     = '25.MB'
-    multiqc_methods_description = null
+    //multiqc_config             = null
+    //multiqc_title              = null
+    //multiqc_logo               = null
+    //max_multiqc_email_size     = '25.MB'
+    //multiqc_methods_description = null
 
     // Boilerplate options
     outdir                       = null
@@ -47,12 +47,17 @@ params {
     config_profile_contact     = null
     config_profile_url         = null
 
+
     // Schema validation default options
     validate_params            = true
+
+    //mail
+    //mail.enabled = false 
 }
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
+//includeConfig 'conf/pipeline.config'
 
 profiles {
     debug {
@@ -243,7 +248,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.0.0dev'
+    version         = '1.0.0'
     doi             = ''
 }
 
@@ -285,4 +290,4 @@ validation {
 }
 
 // Load modules.config for DSL2 module specific options
-includeConfig 'conf/modules.config'
+// includeConfig 'conf/modules.config'
