--- a/nextflow.config
+++ b/nextflow.config
@@ -13,15 +13,9 @@ params {
     // Input options
     input                      = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/samplesheet.csv"
 
-<<<<<<< HEAD
+
     // References
-    //genome                     = null
-    reference_genome           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
-=======
-    // References   
-    genome                     = ''
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
+    fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
 
     // MultiQC options
     //multiqc_config             = null
@@ -29,7 +23,7 @@ params {
     //multiqc_logo               = null
     //max_multiqc_email_size     = '25.MB'
     //multiqc_methods_description = null
->>>>>>> master
+
 
     // Boilerplate options
     outdir                       = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/results_test"
