--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,8 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/samplesheet.csv"
-
+    input                      = ""
+    contamination_fasta        = ""
 
     // References
     fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
@@ -57,7 +57,6 @@ params {
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
-//includeConfig 'conf/pipeline.config'
 
 profiles {
     debug {
@@ -288,4 +287,4 @@ validation {
 }
 
 // Load modules.config for DSL2 module specific options
-// includeConfig 'conf/modules.config'
+includeConfig 'conf/modules.config'
