--- a/nextflow.config
+++ b/nextflow.config
@@ -288,4 +288,4 @@ validation {
 }
 
 // Load modules.config for DSL2 module specific options
-// includeConfig 'conf/modules.config'
+includeConfig 'conf/modules.config'
