--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ params {
     // Input options
     input                      = ""
     contamination_fasta        = ""
+    min_mapQ                   = 10
 
     // References
     fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
