gatk working. now filtermutect

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,6 +17,10 @@ params {
     // References
     fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
 
+
+    // GATK
+    fai          ="/home/juanpi/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.fai"
+
     // MultiQC options
     //multiqc_config             = null
     //multiqc_title              = null
