flye module added

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
     input                      = ""
     contamination_fasta        = ""
     min_mapQ                   = 10
+    flye_mode                  = "--nano-hq"
 
     // References
     fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
