flye minimap faidx added

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     contamination_fasta        = ""
     min_mapQ                   = 10
     flye_mode                  = "--nano-hq"
+    ref_gff                    = ""
 
     // References
     fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
@@ -54,7 +55,7 @@ params {
     validate_params            = true
 
     //mail
-    //mail.enabled = false 
+    //mail.enabled = false
 }
 
 // Load base.config by default for all pipelines
