--- a/nextflow.config
+++ b/nextflow.config
@@ -11,15 +11,22 @@ params {
 
     // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/samplesheet.csv"
+    input                      = "${projectDir}/data_test/samplesheet.csv"
 
 
     // References
-    fasta           = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.gz"
+    fasta           = "${projectDir}/data_test/ref_genome_candida_auris.fasta.gz"
 
 
     // GATK
-    fai          ="/home/juanpi/NF-MITNANEX/data_test/ref_genome_candida_auris.fasta.fai"
+    fai          ="${projectDir}/data_test/ref_genome_candida_auris.fasta.fai"
+
+    // BCFTOOLS_ANNOTATE
+    rename_chr="${projectDir}/data_test/rename_chr.txt"
+    cds_bed = "${projectDir}/data_test/CDS.bed.gz"
+    dloop_bed = "${projectDir}/data_test/DLOOP.bed.gz"
+    header_dloop="${projectDir}/data_test/header_DLOOP.txt"
+    header_cds="${projectDir}/data_test/header_CDS.txt"
 
     // MultiQC options
     //multiqc_config             = null
@@ -30,7 +37,7 @@ params {
 
 
     // Boilerplate options
-    outdir                       = "/Users/jjpc/Documents/nextflow_hackathon/NF-MITNANEX/results_test"
+    outdir                       = "${projectDir}/results_test"
     publish_dir_mode             = 'copy'
     email                        = null
     email_on_fail                = null
